What's new in thtk 2:

* thdat: A bug which made compression for TH07 fail has been
  fixed.
* thdat: Extraction can now use parallel execution.
* thdat: Compression efficiency has been improved beyond
  that of the official archives.
* thdat: Compression times have been reduced by about 40%.